@@ -94,6 +94,9 @@ Release 2.0.5-beta - UNRELEASED
     YARN-474. Fix CapacityScheduler to trigger application-activation when
     am-resource-percent configuration is refreshed. (Zhijie Shen via vinodkv)
 
+    YARN-209. Fix CapacityScheduler to trigger application-activation when
+    the cluster capacity changes. (Zhijie Shen via vinodkv)
+
 Release 2.0.4-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
